<resources>
    <string name="app_name">Simulasi Instagram</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="posts_liked">Posts You\'ve Liked</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="private_acc">Private Account</string>
    <string name="descrip_priv_acc">When your account is private, only people you approve can see your photos and videos. Your
    existing followers won\'t be affected.</string>
    <string name="language">Language</string>
    <string name="save_ori">Save Original Photos</string>
    <string name="save_videos">Save Videos After Posting</string>
    <string name="descrip_save_videos">Saving videos to your phone uses more storage space.</string>
    <string name="about">ABOUT</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms of Service</string>
    <string name="help">Help Center</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="clear_history">Clear Search History</string>
    <string name="logout">Log Out</string>

    <string name="title_home"></string>
    <string name="title_search"></string>
    <string name="title_add"></string>
    <string name="title_notifications"></string>
    <string name="title_account"></string>
    <string name="title_activity_bottom_navbar"></string>

    <string name="change_pp">Change Photo</string>
    <string name="name">Full Name</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="hp">Handphone</string>
    <string name="priv_information">PRIVATE INFORMATION</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string name="curr_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_again">New Password, again</string>

    <string name="unblock">Unblock</string>

    <string name="search">Search</string>
    <string name="userNotFound">User Not Found</string>

    <string name="short_description">Short Description</string>

    <string name="q1">Question 1</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="q4">Question 4</string>

    <string name="edit_your_profile">Edit your profile</string>

    <string name="location">Add Location</string>
    <string name="caption">Write a caption...</string>

    <string name="profile_title">Profile</string>
    <string name="profile_info">When you share photos and videos,\n they\'ll appear on your profile.</string>
    <string name="profile_link">Share your first photo or video</string>

    <string name="tab_following_title">Activity From People \n You Follow</string>
    <string name="tab_following_info">When someone you follow likes or \n comments on someone else\'s post, \n you\'ll see it here.</string>
    <string name="tab_following_link">Find people to follow</string>

    <string name="home_title">Welcome to Instagram</string>
    <string name="home_info">When you follow people, you\'ll see the photos \n and videos they post here.</string>

    <string name="posts_liked_title">No Posts Yet</string>
    <string name="suggested">SUGGESTED FOR YOU</string>

    <string name="banner">Log in to see photos and videos \nfrom your friends</string>

    <string name="login_text">Log In</string>

    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Login Now!!</string>
</resources>
