<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_48dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explorer"
        android:icon="@drawable/ic_search_black_48dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_posting"
        android:icon="@drawable/ic_add_circle_outline_black_48dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_favorite_black_48dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_48dp"
        android:title="@string/title_account" />

</menu>
