<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="80dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/curr_pass"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/confirm_newPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/new_pass_again"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:drawablePadding="10dp"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

