<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include layout="@layout/activity_toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:paddingTop="50dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:background="@android:color/white">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/change_photo"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_account_circle_black_128dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:id="@+id/textView2"
                    android:text="@string/change_pp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="40dp"
                    android:visibility="visible"
                    android:textSize="12sp"/>

                <EditText
                    android:id="@+id/ep_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_assignment_ind_black_24dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:drawablePadding="10dp"/>

                <EditText
                    android:id="@+id/ep_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:drawablePadding="10dp"/>

                <EditText
                    android:id="@+id/ep_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:drawablePadding="10dp"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
